--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	    "url": "https://github.com/narekzilabyan/command-scheduler-bundle.git"
     }],
     "require": {
-        "php": "^5.5.9 || ^7.*",
+        "php": "^5.5.9 || ^7.0",
         "symfony/symfony": "~2.8|~3.*",
         "sensio/framework-extra-bundle": "^3.0.2|^5.0.0",
         "doctrine/orm": "^2.4.8|^2.5",
