--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "sensio/framework-extra-bundle": "^3.0.2|^5.0.0",
         "doctrine/orm": "^2.4.8|^2.5",
         "doctrine/doctrine-bundle": "^1.4|^1.6",
-        "mtdowling/cron-expression": "^1.2"
+        "pmt/cron-expression": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
